ticket #63 just to fix the gap in right panel widgets for now

--- a/fedoracommunity/public/css/application-chrome.css
+++ b/fedoracommunity/public/css/application-chrome.css
@@ -884,6 +884,7 @@ h1#greeter img {
   float: left;
   width: auto;
   margin-top: 2px;
+  display: none;
 }
 
 .list .pager {
